--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <a href="https://tiktok.com/@tomas.rolo.56" target="_blank">
                     <i class="bi bi-tiktok iconTiktok"></i>
                 </a>
+                <a href="https://wa.me/916229732" target="_blank">
+                    <i class="bi bi-whatsapp"></i>
+                </a>
             </section>
 
             <section class="container pageCards">
@@ -71,12 +74,20 @@
                         <button type="button" class="btn btn-outline-success copyButton" data-url-midia="https://tiktok.com/@tomas.rolo.56">Copiar link</button>
                     </div>
                 </div>
+
+                <!-- Nova Rede Social -->
+                <div class="card">
+                    <div class="card-body">
+                        <img src="./Imagens/img-1.jpg" alt="Rede Social Quatro">
+                        <a href="https://wa.me/916229732" target="_blank" class="card-text">Whatsapp</a>
+                        <button type="button" class="btn btn-outline-success copyButton" data-url-midia="https://wa.me/916229732">Copiar link</button>
+                    </div>
+                </div>
+
             </section>
         </div>
     </main>
 
-   
-    
     <!-- Link Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
