--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 <a href="https://wa.me/916229732" target="_blank">
                     <i class="bi bi-whatsapp"></i>
                 </a>
+                <a href="https://discord.com/users/888340043549278238" target="_blank">
+                    <i class="bi bi-discord iconDiscord"></i>
+                </a>
             </section>
 
             <section class="container pageCards">
@@ -81,6 +84,15 @@
                         <img src="./Imagens/img-1.jpg" alt="Rede Social Quatro">
                         <a href="https://wa.me/916229732" target="_blank" class="card-text">Whatsapp</a>
                         <button type="button" class="btn btn-outline-success copyButton" data-url-midia="https://wa.me/916229732">Copiar link</button>
+                    </div>
+                </div>
+
+                <!-- Nova Rede Social -->
+                <div class="card">
+                    <div class="card-body">
+                        <img src="./Imagens/img-1.jpg" alt="Rede Social Cinco">
+                        <a href="https://discord.com/users/888340043549278238" target="_blank" class="card-text">Discord</a>
+                        <button type="button" class="btn btn-outline-success copyButton" data-url-midia="https://discord.com/users/888340043549278238">Copiar link</button>
                     </div>
                 </div>
 
