--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <a href="https://discord.com/users/888340043549278238" target="_blank">
                     <i class="bi bi-discord iconDiscord"></i>
                 </a>
+                <a href="https://snapchat.com/add/tomasrolo56" target="_blank">
+                    <i class="bi bi-snapchat iconSnapchat"></i>
+                </a>
             </section>
 
             <section class="container pageCards">
@@ -95,7 +98,14 @@
                         <button type="button" class="btn btn-outline-success copyButton" data-url-midia="https://discord.com/users/888340043549278238">Copiar link</button>
                     </div>
                 </div>
-
+                <!-- Nova Rede Social -->
+                <div class="card">
+                    <div class="card-body">
+                        <img src="./Imagens/img-1.jpg" alt="Rede Social Seis">
+                        <a href="https://snapchat.com/add/tomasrolo56" target="_blank" class="card-text">Snapchat</a>
+                        <button type="button" class="btn btn-outline-success copyButton" data-url-midia="https://snapchat.com/add/tomasrolo56">Copiar link</button>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
